--- a/index.html
+++ b/index.html
@@ -1,77 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Strings2Book | Book Reviews & Analysis</title>
-  <meta name="description" content="Strings2Book offers in-depth book reviews, critical analysis, and thoughtful reflections on literature." />
-  <meta name="keywords" content="book reviews, book analysis, strings2book, literature blog" />
-  <meta name="author" content="Strings2Book" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <title>Strings2Book | Book Reviews & Literary Analysis</title>
+
+  <!-- SEO -->
+  <meta name="description" content="Strings2Book – thoughtful book reviews, deep literary analysis, and honest reading reflections by a passionate reader.">
+  <meta name="keywords" content="book reviews, book analysis, literature blog, Indian book reviewer, Strings2Book">
+  <meta name="author" content="Strings2Book">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+
   <style>
     body {
       margin: 0;
-      font-family: Georgia, serif;
-      background: #f8f8f8;
+      font-family: 'Inter', sans-serif;
+      background: #f7f7f7;
       color: #222;
-      line-height: 1.7;
+      line-height: 1.6;
     }
+
     header {
       background: #ffffff;
-      padding: 20px;
+      padding: 60px 20px;
       text-align: center;
       border-bottom: 1px solid #ddd;
     }
+
     header h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 42px;
       margin: 0;
     }
+
+    header p {
+      font-size: 16px;
+      color: #555;
+      max-width: 600px;
+      margin: 15px auto 0;
+    }
+
     section {
-      max-width: 800px;
-      margin: 40px auto;
+      max-width: 900px;
+      margin: 50px auto;
       padding: 0 20px;
     }
-    .card {
-      background: white;
-      padding: 20px;
-      margin-bottom: 20px;
-      border-radius: 6px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+
+    h2 {
+      font-family: 'Playfair Display', serif;
+      font-size: 28px;
+      margin-bottom: 15px;
     }
+
+    .about p {
+      color: #444;
+    }
+
+    .reviews {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 25px;
+    }
+
+    .card {
+      background: #ffffff;
+      padding: 20px;
+      border-radius: 6px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+    }
+
+    .card h3 {
+      margin-top: 0;
+      font-family: 'Playfair Display', serif;
+      font-size: 20px;
+    }
+
+    .card p {
+      font-size: 14px;
+      color: #555;
+    }
+
+    .instagram {
+      text-align: center;
+      margin-top: 40px;
+    }
+
+    .instagram a {
+      text-decoration: none;
+      color: #ffffff;
+      background: #000;
+      padding: 12px 24px;
+      border-radius: 30px;
+      font-size: 14px;
+    }
+
     footer {
       text-align: center;
-      padding: 20px;
-      font-size: 14px;
-      color: #666;
+      padding: 30px 15px;
+      font-size: 13px;
+      color: #777;
     }
   </style>
 </head>
+
 <body>
 
 <header>
   <h1>Strings2Book</h1>
-  <p>Book reviews, analysis & honest literary reflections</p>
+  <p>Honest book reviews, layered literary analysis, and reflections from a reader who believes stories shape us.</p>
 </header>
 
-<section>
-  <div class="card">
-    <h2>Welcome</h2>
-    <p>
-      Strings2Book is a space for thoughtful book reviews, deep analysis,
-      and serious conversations around literature. Every book is read with
-      attention, honesty, and care.
-    </p>
-  </div>
+<section class="about">
+  <h2>About</h2>
+  <p>
+    Strings2Book is a personal literary space dedicated to thoughtful book reviews and deep analysis.
+    Here, books are not rated in haste — they are read, felt, questioned, and understood.
+  </p>
+</section>
 
-  <div class="card">
-    <h2>What You Will Find</h2>
-    <p>
-      In-depth reviews, thematic breakdowns, strengths and weaknesses,
-      and reflections that go beyond surface-level reading.
-    </p>
+<section>
+  <h2>Recent Reviews</h2>
+
+  <div class="reviews">
+    <div class="card">
+      <h3>Mrs Funnybones Returns</h3>
+      <p>A sharp, humorous reflection on modern Indian womanhood, ageing, and quiet resilience.</p>
+    </div>
+
+    <div class="card">
+      <h3>You Can Have It All</h3>
+      <p>A reflective exploration of ambition, balance, and the myths we carry about happiness.</p>
+    </div>
+
+    <div class="card">
+      <h3>Mission Saudi</h3>
+      <p>A gripping true-crime narrative that examines justice, perseverance, and systemic courage.</p>
+    </div>
   </div>
 </section>
 
+<section class="instagram">
+  <h2>Follow on Instagram</h2>
+  <a href="https://www.instagram.com/strings_2_book" target="_blank">Visit @strings_2_book</a>
+</section>
+
 <footer>
-  © 2025 Strings2Book | Instagram: @strings_2_book
+  © 2025 Strings2Book · Built with care and clarity
 </footer>
 
 </body>
