Redesign homepage with aesthetic layout
Updated meta tags for improved SEO and modified content structure in the HTML file.

--- a/index.html
+++ b/index.html
@@ -1,153 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Strings2Book | Book Reviews & Literary Analysis</title>
+<meta charset="UTF-8">
+<title>Strings2Book | Literary Reviews & Analysis</title>
+<meta name="description" content="Thoughtful book reviews, literary analysis, and reflections across fiction, non-fiction, poetry, and crime thrillers.">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- SEO -->
-  <meta name="description" content="Strings2Book – thoughtful book reviews, deep literary analysis, and honest reading reflections by a passionate reader.">
-  <meta name="keywords" content="book reviews, book analysis, literature blog, Indian book reviewer, Strings2Book">
-  <meta name="author" content="Strings2Book">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+body {
+  margin: 0;
+  font-family: "Georgia", serif;
+  background: #faf8f5;
+  color: #222;
+}
 
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+.container {
+  width: 90%;
+  max-width: 1100px;
+  margin: auto;
+}
 
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Inter', sans-serif;
-      background: #f7f7f7;
-      color: #222;
-      line-height: 1.6;
-    }
+header {
+  padding: 80px 0;
+  text-align: center;
+}
 
-    header {
-      background: #ffffff;
-      padding: 60px 20px;
-      text-align: center;
-      border-bottom: 1px solid #ddd;
-    }
+header h1 {
+  font-size: 3.5rem;
+  margin-bottom: 10px;
+}
 
-    header h1 {
-      font-family: 'Playfair Display', serif;
-      font-size: 42px;
-      margin: 0;
-    }
+header p {
+  font-size: 1.2rem;
+  color: #555;
+  max-width: 700px;
+  margin: auto;
+}
 
-    header p {
-      font-size: 16px;
-      color: #555;
-      max-width: 600px;
-      margin: 15px auto 0;
-    }
+section {
+  padding: 70px 0;
+}
 
-    section {
-      max-width: 900px;
-      margin: 50px auto;
-      padding: 0 20px;
-    }
+h2 {
+  font-size: 2.2rem;
+  margin-bottom: 30px;
+}
 
-    h2 {
-      font-family: 'Playfair Display', serif;
-      font-size: 28px;
-      margin-bottom: 15px;
-    }
+.about {
+  font-size: 1.1rem;
+  line-height: 1.8;
+  max-width: 800px;
+}
 
-    .about p {
-      color: #444;
-    }
+.categories,
+.reviews {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 30px;
+}
 
-    .reviews {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 25px;
-    }
+.card {
+  background: #ffffff;
+  border-radius: 14px;
+  overflow: hidden;
+  box-shadow: 0 12px 30px rgba(0,0,0,0.06);
+  transition: transform 0.3s ease;
+}
 
-    .card {
-      background: #ffffff;
-      padding: 20px;
-      border-radius: 6px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
-    }
+.card:hover {
+  transform: translateY(-6px);
+}
 
-    .card h3 {
-      margin-top: 0;
-      font-family: 'Playfair Display', serif;
-      font-size: 20px;
-    }
+.card img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
 
-    .card p {
-      font-size: 14px;
-      color: #555;
-    }
+.card-content {
+  padding: 20px;
+}
 
-    .instagram {
-      text-align: center;
-      margin-top: 40px;
-    }
+.card-content h3 {
+  margin: 0 0 10px;
+}
 
-    .instagram a {
-      text-decoration: none;
-      color: #ffffff;
-      background: #000;
-      padding: 12px 24px;
-      border-radius: 30px;
-      font-size: 14px;
-    }
+.card-content p {
+  font-size: 0.95rem;
+  color: #555;
+}
 
-    footer {
-      text-align: center;
-      padding: 30px 15px;
-      font-size: 13px;
-      color: #777;
-    }
-  </style>
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+footer {
+  text-align: center;
+  padding: 40px 0;
+  font-size: 0.9rem;
+  color: #666;
+}
+</style>
 </head>
 
 <body>
 
 <header>
-  <h1>Strings2Book</h1>
-  <p>Honest book reviews, layered literary analysis, and reflections from a reader who believes stories shape us.</p>
+  <div class="container">
+    <h1>Strings2Book</h1>
+    <p>Honest book reviews, layered literary analysis, and reflections from a reader who believes stories shape us.</p>
+  </div>
 </header>
 
-<section class="about">
-  <h2>About</h2>
-  <p>
-    Strings2Book is a personal literary space dedicated to thoughtful book reviews and deep analysis.
-    Here, books are not rated in haste — they are read, felt, questioned, and understood.
-  </p>
+<section>
+  <div class="container">
+    <h2>About Me</h2>
+    <p class="about">
+      Strings2Book is my personal literary space where books are not rushed through ratings.
+      They are read slowly, felt deeply, questioned honestly, and written about with care.
+      I explore stories across genres — fiction, non-fiction, poetry, biography, and crime —
+      always searching for meaning beyond the last page.
+    </p>
+  </div>
 </section>
 
 <section>
-  <h2>Recent Reviews</h2>
+  <div class="container">
+    <h2>Browse by Category</h2>
+    <div class="categories">
 
-  <div class="reviews">
-    <div class="card">
-      <h3>Mrs Funnybones Returns</h3>
-      <p>A sharp, humorous reflection on modern Indian womanhood, ageing, and quiet resilience.</p>
-    </div>
+      <div class="card">
+        <div class="card-content">
+          <h3>Fiction</h3>
+          <p>Stories, characters, and imagined worlds.</p>
+        </div>
+      </div>
 
-    <div class="card">
-      <h3>You Can Have It All</h3>
-      <p>A reflective exploration of ambition, balance, and the myths we carry about happiness.</p>
-    </div>
+      <div class="card">
+        <div class="card-content">
+          <h3>Non-Fiction</h3>
+          <p>Ideas, society, and lived realities.</p>
+        </div>
+      </div>
 
-    <div class="card">
-      <h3>Mission Saudi</h3>
-      <p>A gripping true-crime narrative that examines justice, perseverance, and systemic courage.</p>
+      <div class="card">
+        <div class="card-content">
+          <h3>Poetry</h3>
+          <p>Verses that breathe emotion.</p>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-content">
+          <h3>Biography & Autobiography</h3>
+          <p>Lives worth reading.</p>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-content">
+          <h3>Crime & Thriller</h3>
+          <p>Mystery, suspense, and truth.</p>
+        </div>
+      </div>
+
     </div>
   </div>
 </section>
 
-<section class="instagram">
-  <h2>Follow on Instagram</h2>
-  <a href="https://www.instagram.com/strings_2_book" target="_blank">Visit @strings_2_book</a>
+<section>
+  <div class="container">
+    <h2>Latest Reviews</h2>
+
+    <div class="reviews">
+
+      <a href="reviews/mrs-funnybones.html" class="card">
+        <img src="https://images.unsplash.com/photo-1512820790803-83ca734da794">
+        <div class="card-content">
+          <h3>Mrs Funnybones Returns</h3>
+          <p>Humour, womanhood, and everyday truths.</p>
+        </div>
+      </a>
+
+      <a href="reviews/deadly-clues.html" class="card">
+        <img src="https://images.unsplash.com/photo-1524995997946-a1c2e315a42f">
+        <div class="card-content">
+          <h3>Deadly Clues</h3>
+          <p>A razor-sharp detective collection.</p>
+        </div>
+      </a>
+
+    </div>
+  </div>
 </section>
 
 <footer>
-  © 2025 Strings2Book · Built with care and clarity
+  © Strings2Book · Built with love for books
 </footer>
 
 </body>
